fix(Button): add overflow

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -10,6 +10,7 @@
   user-select: none;
   border-radius: var(--vkui--size_border_radius--regular);
   max-width: 100%;
+  overflow: hidden;
 }
 
 .Button--stretched {
@@ -17,6 +18,7 @@
   width: 100%;
   flex-grow: 1;
   flex-basis: 0;
+  overflow: visible;
 }
 
 .Button__in {
